syntax = "proto3";

package speechkit.stt.v3;

import "stt.proto";

// Упрощенные определения для замены внешних импортов
message Empty {}

message Operation {
  string id = 1;
  bool done = 2;
  string error = 3;
  bytes response = 4;
}

// Опции для HTTP аннотаций
message HttpRule {
  string post = 1;
  string get = 2;
  string delete = 3;
  string body = 4;
}

message OperationRule {
  string response = 1;
}

// Основной сервис распознавания речи
service Recognizer {
    // Ожидает аудио в реальном времени
    rpc RecognizeStreaming (stream StreamingRequest) returns (stream StreamingResponse) {}
}

message GetRecognitionRequest {
    string operation_id = 1;
}

// Сервис для асинхронного распознавания речи
service AsyncRecognizer {
    rpc RecognizeFile (RecognizeFileRequest) returns (Operation) {}
    
    rpc GetRecognition(GetRecognitionRequest) returns (stream StreamingResponse) {}
    
    rpc DeleteRecognition(DeleteRecognitionRequest) returns (Empty) {}
}
